--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     </p>
                 </div>
                 <div class="sec_subtext">
-                    <h2>How it benefits you...</h2>
+                    <h2>How it benefits you?</h2>
                     <p>This program offers comprehensive ML training for problem-solving, interview prep, regular
                         performance evaluations, a recommendation letter, and a guaranteed job post-completion. Apply
                         now to receive guidance from experienced mentors.
