--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
-    <link rel="icon" type="image/x-icon" href="./Images/favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="./Images/ai_favicon.png">
 
 </head>
 
@@ -206,11 +206,11 @@
         <div class="courses_content">
 
             <ul class="courses_list">
-                <li class="lii active">Python Programming</li>
+                <li class="lii">Python for Data Science</li>
+                <li class="lii">Python Programming</li>
                 <li class="lii">Machine Learning Bootcamp</li>
                 <li class="lii">ML professional</li>
                 <li class="lii">Applied Machine Learning and OpenCV</li>
-                <li class="lii">Computer Vision Specialisation</li>
                 <li class="lii">Advanced Computer Vision</li>
                 <li class="lii">Reinforcement Learning</li>
             </ul>
